@@ -8,12 +8,16 @@ Changes since 2.9.3a:
 	- make IPv6 work again on FreeBSD (Peter van Dijk)
 	- neglected to properly initialize the socklen of accept of dynlistener ;-(
 	- make *all* sql in gsqlbackends available for configuration (Martin Klebermass/bert hubert)
-	- multiple backende+axfr work again
+	- multiple backends+axfr work again
 	- axfr backend transaction now only started after first actual
 	  record is in
 	- improve bindbackend abortTransaction
+		should no longer block the zone
 	- huge improvement in performance of bind-domain-status
 		(spotted by Erik Bos)
+	- further alignment fixes (should help on UltraSparc)
+	- AXFR terminated with an EOF is now an error, unless a second SOA
+		was seen
 
 Changes since 2.9.2:
 	- windows compilation patches
